applications/stirling-pdf/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: stirling-pdf
  namespace: stirling-pdf

spec:
  selector:
    app: stirling-pdf
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
